Add publications section

--- a/index.Rmd
+++ b/index.Rmd
@@ -38,7 +38,11 @@ MSc in Finance | 2010 - 2012
 
 **Monterrey Institute of Technology** | Queretaro, Mexico
 
-BSc Mechatronics Engineering | 2005 - 2010 
+BSc Mechatronics Engineering | 2005 - 2010
+
+## Publications
+
+[Value Relevance of Accounting Fundamentals in the Mexican Stock Exchange](https://www.academia.edu/14449992/VALUE_RELEVANCE_OF_ACCOUNTING_FUNDAMENTALS_IN_THE_MEXICAN_STOCK_EXCHANGE) | 2012 | American Council of Management Schools (CLADEA).
 
 ## Experience
 
