--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,9 @@ Areas of Expertise:
 
 ## Experience
 
-**PwC** | Data Scientist, Manager | Spain | 2021 - Present
+**EY** | Data Scientist, Manager | Spain | 2022 - Present
+
+**PwC** | Data Scientist, Manager | Spain | 2021 - 2022
   
 **PwC** | Data Scientist, Manager | UK | 2017 - 2020
 
